--- a/examples/SamplesContainer.ipynb
+++ b/examples/SamplesContainer.ipynb
@@ -25,7 +25,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x164da5763a0>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1efd34b9550>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -64,7 +64,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "File(name='Samples+Table.csv', content=b'ID,Created Date,Description,Comments,Amount,Attached Docs,Template\\r\\nSample-1776,2022-06-13T13:54:43.380521116Z,,999,,0,Sample\\r\\nSample-1777,2022-06-13T13:55:51.211451408Z,5545,999,,0,Sample\\r\\nSample-1778,2022-06-13T13:59:34.535249108Z,,999,,0,Sample\\r\\nSample-1779,2022-06-13T14:00:31.649713156Z,,999,,0,Sample\\r\\nSample-1781,2022-06-14T09:51:10.942740735Z,,999,,0,Sample\\r\\n', content_type='text/csv')"
+      "text/plain": "File(name='Samples+Table.csv', content=b'ID,Created Date,Description,Comments,Amount,Attached Docs,Template\\r\\nSample-1776,2022-06-13T13:54:43.380521116Z,,www,,0,Sample\\r\\nSample-1777,2022-06-13T13:55:51.211451408Z,5545,www,,0,Sample\\r\\nSample-1778,2022-06-13T13:59:34.535249108Z,,www,,0,Sample\\r\\nSample-1779,2022-06-13T14:00:31.649713156Z,,www,,0,Sample\\r\\nSample-1781,2022-06-14T09:51:10.942740735Z,,www,,0,Sample\\r\\n', content_type='text/csv')"
      },
      "execution_count": 4,
      "metadata": {},
@@ -86,23 +86,17 @@
    "execution_count": 5,
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\d.cherednichenko\\AppData\\Local\\Temp\\ipykernel_23396\\3925987743.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
-      "  from IPython.core.display import display, HTML\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "\n<div class=\"table-wrapper\" style=\"margin: 10px 10px; padding: 6px 10px; border: solid 1px #f5f5f5;\">\n    <div class=\"table-scroll\">\n        <h2>Samples Table</h2>\n        <table>\n            <thead>\n                <tr>\n                \n                    <th>ID</th>\n                \n                    <th>Created Date</th>\n                \n                    <th>Description</th>\n                \n                    <th>Comments</th>\n                \n                    <th>Amount</th>\n                \n                    <th>Attached Docs</th>\n                \n                    <th>Template</th>\n                \n                </tr>\n            </thead>\n            <tbody>\n            \n                <tr>\n                \n                    <td>Sample-1776</td>\n                \n                    <td>2022-06-13T13:54:43.380521116Z</td>\n                \n                    <td></td>\n                \n                    <td>999</td>\n                \n                    <td></td>\n                \n                    <td>0</td>\n                \n                    <td>Sample</td>\n                \n                </tr>\n            \n                <tr>\n                \n                    <td>Sample-1777</td>\n                \n                    <td>2022-06-13T13:55:51.211451408Z</td>\n                \n                    <td>5545</td>\n                \n                    <td>999</td>\n                \n                    <td></td>\n                \n                    <td>0</td>\n                \n                    <td>Sample</td>\n                \n                </tr>\n            \n                <tr>\n                \n                    <td>Sample-1778</td>\n                \n                    <td>2022-06-13T13:59:34.535249108Z</td>\n                \n                    <td></td>\n                \n                    <td>999</td>\n                \n                    <td></td>\n                \n                    <td>0</td>\n                \n                    <td>Sample</td>\n                \n                </tr>\n            \n                <tr>\n                \n                    <td>Sample-1779</td>\n                \n                    <td>2022-06-13T14:00:31.649713156Z</td>\n                \n                    <td></td>\n                \n                    <td>999</td>\n                \n                    <td></td>\n                \n                    <td>0</td>\n                \n                    <td>Sample</td>\n                \n                </tr>\n            \n                <tr>\n                \n                    <td>Sample-1781</td>\n                \n                    <td>2022-06-14T09:51:10.942740735Z</td>\n                \n                    <td></td>\n                \n                    <td>999</td>\n                \n                    <td></td>\n                \n                    <td>0</td>\n                \n                    <td>Sample</td>\n                \n                </tr>\n            \n            </tbody>\n        </table>\n    </div>\n</div>\n"
+      "text/html": "\n<div class=\"table-wrapper\" style=\"margin: 10px 10px; padding: 6px 10px; border: solid 1px #f5f5f5;\">\n    <div class=\"table-scroll\">\n        <h2>Samples Table</h2>\n        <table>\n            <thead>\n                <tr>\n                \n                    <th>ID</th>\n                \n                    <th>Created Date</th>\n                \n                    <th>Description</th>\n                \n                    <th>Comments</th>\n                \n                    <th>Amount</th>\n                \n                    <th>Attached Docs</th>\n                \n                    <th>Template</th>\n                \n                </tr>\n            </thead>\n            <tbody>\n            \n                <tr>\n                \n                    <td>Sample-1776</td>\n                \n                    <td>2022-06-13T13:54:43.380521116Z</td>\n                \n                    <td></td>\n                \n                    <td>www</td>\n                \n                    <td></td>\n                \n                    <td>0</td>\n                \n                    <td>Sample</td>\n                \n                </tr>\n            \n                <tr>\n                \n                    <td>Sample-1777</td>\n                \n                    <td>2022-06-13T13:55:51.211451408Z</td>\n                \n                    <td>5545</td>\n                \n                    <td>www</td>\n                \n                    <td></td>\n                \n                    <td>0</td>\n                \n                    <td>Sample</td>\n                \n                </tr>\n            \n                <tr>\n                \n                    <td>Sample-1778</td>\n                \n                    <td>2022-06-13T13:59:34.535249108Z</td>\n                \n                    <td></td>\n                \n                    <td>www</td>\n                \n                    <td></td>\n                \n                    <td>0</td>\n                \n                    <td>Sample</td>\n                \n                </tr>\n            \n                <tr>\n                \n                    <td>Sample-1779</td>\n                \n                    <td>2022-06-13T14:00:31.649713156Z</td>\n                \n                    <td></td>\n                \n                    <td>www</td>\n                \n                    <td></td>\n                \n                    <td>0</td>\n                \n                    <td>Sample</td>\n                \n                </tr>\n            \n                <tr>\n                \n                    <td>Sample-1781</td>\n                \n                    <td>2022-06-14T09:51:10.942740735Z</td>\n                \n                    <td></td>\n                \n                    <td>www</td>\n                \n                    <td></td>\n                \n                    <td>0</td>\n                \n                    <td>Sample</td>\n                \n                </tr>\n            \n            </tbody>\n        </table>\n    </div>\n</div>\n"
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
    "source": [
+    "import warnings # added to ignore deprecation warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "from IPython.core.display import display, HTML\n",
     "\n",
     "samples_container_html = samplesContainer.get_html()\n",
@@ -117,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "NEW_VALUE = 'www'\n",
@@ -133,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -166,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "samplesContainer.save()"
@@ -180,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -208,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -243,13 +237,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
       "text/plain": "SampleProperty(id=UUID('b718adec-73e0-3ce3-ac72-0dd11a06a308'), name='ID', content=CellPropertyContent(value='Sample-1776', name=None, eid=None, values=None))"
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,13 +261,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
       "text/plain": "SampleProperty(id=UUID('b718adec-73e0-3ce3-ac72-0dd11a06a308'), name='ID', content=CellPropertyContent(value='Sample-1776', name=None, eid=None, values=None))"
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
