--- a/examples/TodoList.ipynb
+++ b/examples/TodoList.ipynb
@@ -25,7 +25,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x14f9de6b550>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x2a902ad8400>"
      },
      "execution_count": 2,
      "metadata": {},
@@ -66,7 +66,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "TodoList(type=<EntityType.TODO_LIST: 'linkedTaskContainer'>, eid='linkedTaskContainer:1bd246f0-8b65-4360-8fb1-ddac9e02c332', digest='83303316', name='Tasks to do', description='', created_at=datetime.datetime(2022, 6, 21, 10, 23, 20, 533000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 23, 10, 6, 0, 34000, tzinfo=datetime.timezone.utc))"
+      "text/plain": "TodoList(type=<EntityType.TODO_LIST: 'linkedTaskContainer'>, eid='linkedTaskContainer:1bd246f0-8b65-4360-8fb1-ddac9e02c332', digest='53596160', name='Tasks to do', description='', created_at=datetime.datetime(2022, 6, 21, 10, 23, 20, 533000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 23, 14, 37, 52, 958000, tzinfo=datetime.timezone.utc))"
      },
      "execution_count": 4,
      "metadata": {},
@@ -140,8 +140,9 @@
    "execution_count": 7,
    "outputs": [],
    "source": [
-    "with open('test_file.html', 'w') as f:\n",
-    "    f.write(todo_html)"
+    "NEW_VALUE = 'www'\n",
+    "for task in todo_list:\n",
+    "    task['4'].set_content_value(NEW_VALUE)"
    ],
    "metadata": {
     "collapsed": false,
@@ -153,32 +154,20 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "outputs": [],
-   "source": [
-    "todo_list._reload_tasks()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "outputs": [
     {
-     "data": {
-      "text/plain": "Task(type=<EntityType.TASK: 'task'>, eid='task:58ebedd9-c158-4bf3-b737-b45aea636a61', digest='93193478', name='Task-4', description='', created_at=datetime.datetime(2021, 11, 11, 11, 31, 32, 289000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 23, 10, 6, 0, 34000, tzinfo=datetime.timezone.utc))"
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id='4' name='Requestor Comment' content=CellPropertyContent(value='www', name=None, eid=None, values=None)\n",
+      "True\n"
+     ]
     }
    ],
    "source": [
-    "todo_list[0]"
+    "for task in todo_list:\n",
+    "    print(task['4'])\n",
+    "    print(task['4'].is_changed)"
    ],
    "metadata": {
     "collapsed": false,
@@ -191,7 +180,137 @@
    "cell_type": "code",
    "execution_count": 9,
    "outputs": [],
-   "source": [],
+   "source": [
+    "todo_list.save()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "www\n"
+     ]
+    }
+   ],
+   "source": [
+    "for task in todo_list:\n",
+    "    print(task['4'].content_value)\n",
+    "    assert task['4'].content_value == NEW_VALUE"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id='1' name='Task ID' content=CellPropertyContent(value='task:58ebedd9-c158-4bf3-b737-b45aea636a61', name=None, eid=None, values=None)\n",
+      "id='2' name='Task Type' content=CellPropertyContent(value='Task', name=None, eid=None, values=None)\n",
+      "id='3' name='Reference ID' content=CellPropertyContent(value='experiment:8d7eab5c-75a5-4458-ae6a-285ab0116a44', name=None, eid=None, values=None)\n",
+      "id='4' name='Requestor Comment' content=CellPropertyContent(value='www', name=None, eid=None, values=None)\n",
+      "id='5' name='Analyst Comment' content=CellPropertyContent(value=None, name=None, eid=None, values=None)\n",
+      "id='6' name='Required By' content=CellPropertyContent(value=None, name=None, eid=None, values=None)\n",
+      "id='7' name='Analyst' content=CellPropertyContent(value={'userId': '119', 'userName': 'evgeniy.pokidov@quantori.com', 'email': 'evgeniy.pokidov@quantori.com', 'firstName': 'Evgeniy', 'lastName': 'Pokidov', 'picture': {}}, name=None, eid=None, values=None)\n",
+      "id='8' name='Experiment Link' content=CellPropertyContent(value='experiment:f7fb12b2-1180-4fa0-9bcd-ccc2f7ec0e8f', name=None, eid=None, values=None)\n",
+      "id='9' name='Request Link' content=CellPropertyContent(value='request:f56f61c5-9e1a-4c33-aa89-e9416027a586', name=None, eid=None, values=None)\n",
+      "id='10' name='Status' content=CellPropertyContent(value='In Progress', name=None, eid=None, values=None)\n",
+      "id='11' name='Attached Docs' content=CellPropertyContent(value='0', name=None, eid='task:58ebedd9-c158-4bf3-b737-b45aea636a61', values=None)\n",
+      "id='13' name='Created Date' content=CellPropertyContent(value='2022-06-15T21:00:00.000Z', name=None, eid=None, values=None)\n"
+     ]
+    }
+   ],
+   "source": [
+    "task = todo_list[0]\n",
+    "for item in task:\n",
+    "    print(item)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id='10' name='Status' content=CellPropertyContent(value='In Progress', name=None, eid=None, values=None)\n",
+      "id='11' name='Attached Docs' content=CellPropertyContent(value='0', name=None, eid='task:58ebedd9-c158-4bf3-b737-b45aea636a61', values=None)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get property by id\n",
+    "print(task['10'])\n",
+    "\n",
+    "# or by index\n",
+    "print(task[10])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id='1' name='Task ID' content=CellPropertyContent(value='task:58ebedd9-c158-4bf3-b737-b45aea636a61', name=None, eid=None, values=None)\n",
+      "id='10' name='Status' content=CellPropertyContent(value='In Progress', name=None, eid=None, values=None)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get any property of task from TodoList:\n",
+    "# by index\n",
+    "print(todo_list[0][0])\n",
+    "\n",
+    "# by uuid\n",
+    "print(todo_list[0]['10'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# TODO: add TodoList creation method"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
