--- a/examples/UserStore.ipynb
+++ b/examples/UserStore.ipynb
@@ -2,17 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The dotenv extension is already loaded. To reload it, use:\n",
-      "  %reload_ext dotenv\n"
-     ]
-    }
-   ],
+   "execution_count": 1,
+   "outputs": [],
    "source": [
     "%load_ext dotenv\n",
     "%dotenv\n",
@@ -30,13 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x185aa413bb0>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x26ec0c3a550>"
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,13 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "User(is_enabled=True, id='119', username='evgeniy.pokidov@quantori.com', email='evgeniy.pokidov@quantori.com', alias=None, first_name='Evgeniy', last_name='Pokidov', country='USA', organization='quantori', created_at=datetime.datetime(2022, 1, 24, 13, 25, 24, 180000, tzinfo=datetime.timezone.utc), last_login_at=datetime.datetime(2022, 6, 24, 13, 15, 28, 657000, tzinfo=datetime.timezone.utc))"
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,13 +71,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
-      "text/plain": "User(is_enabled=True, id='103', username='sergey.kuznetsov@quantori.com', email='sergey.kuznetsov@quantori.com', alias=None, first_name='Sergey', last_name='Kuznetsov', country='USA', organization='quantori', created_at=datetime.datetime(2021, 11, 3, 3, 0, 6, 567000, tzinfo=datetime.timezone.utc), last_login_at=datetime.datetime(2022, 7, 1, 11, 48, 58, 901000, tzinfo=datetime.timezone.utc))"
+      "text/plain": "User(is_enabled=True, id='103', username='sergey.kuznetsov@quantori.com', email='sergey.kuznetsov@quantori.com', alias=None, first_name='Sergey', last_name='Kuznetsov', country='USA', organization='quantori', created_at=datetime.datetime(2021, 11, 3, 3, 0, 6, 567000, tzinfo=datetime.timezone.utc), last_login_at=datetime.datetime(2022, 7, 1, 12, 4, 53, 789000, tzinfo=datetime.timezone.utc))"
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "from signals_notebook.common_types import File\n",
@@ -126,7 +117,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[Group(type=<ObjectType.GROUP: 'group'>, eid='group:102', id='102', is_system=True),\n Group(type=<ObjectType.GROUP: 'group'>, eid='group:101', id='101', is_system=True)]"
+      "text/plain": "[Group(type=<ObjectType.GROUP: 'group'>, eid='group:101', id='101', is_system=True),\n Group(type=<ObjectType.GROUP: 'group'>, eid='group:102', id='102', is_system=True)]"
      },
      "execution_count": 6,
      "metadata": {},
@@ -181,7 +172,7 @@
     }
    ],
    "source": [
-    "UserStore.refresh(user)\n",
+    "user.refresh()\n",
     "user"
    ],
    "metadata": {
@@ -193,14 +184,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "from signals_notebook.entities import User\n",
     "\n",
     "users = UserStore.get_list()\n",
-    "for user in users:\n",
-    "    assert isinstance(user, User)"
+    "for item in users:\n",
+    "    assert isinstance(item, User)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "User(is_enabled=True, id='119', username='evgeniy.pokidov@quantori.com', email='evgeniy.pokidov@quantori.com', alias=None, first_name='Evgeniy', last_name='Pokidov', country='USA', organization='quantori', created_at=datetime.datetime(2022, 1, 24, 13, 25, 24, 180000, tzinfo=datetime.timezone.utc), last_login_at=datetime.datetime(2022, 6, 24, 13, 15, 28, 657000, tzinfo=datetime.timezone.utc))"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user"
    ],
    "metadata": {
     "collapsed": false,
@@ -216,6 +230,45 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [],
+   "source": [
+    "user.alias = f'{user.first_name.lower()}.{user.last_name.lower()}'\n",
+    "user.save()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "User(is_enabled=True, id='119', username='evgeniy.pokidov@quantori.com', email='evgeniy.pokidov@quantori.com', alias='evgeniy.pokidov', first_name='Evgeniy', last_name='Pokidov', country='USA', organization='quantori', created_at=datetime.datetime(2022, 1, 24, 13, 25, 24, 180000, tzinfo=datetime.timezone.utc), last_login_at=datetime.datetime(2022, 6, 24, 13, 15, 28, 657000, tzinfo=datetime.timezone.utc))"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user.refresh()\n",
+    "user"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   },
