--- a/examples/UploadedResource.ipynb
+++ b/examples/UploadedResource.ipynb
@@ -2,17 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The dotenv extension is already loaded. To reload it, use:\n",
-      "  %reload_ext dotenv\n"
-     ]
-    }
-   ],
+   "execution_count": 1,
+   "outputs": [],
    "source": [
     "%load_ext dotenv\n",
     "%dotenv\n",
@@ -30,13 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x18e170ee130>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1ed65ef62e0>"
      },
-     "execution_count": 45,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "from signals_notebook.entities import EntityStore\n",
@@ -71,12 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "from signals_notebook.entities import UploadedResource\n",
     "\n",
-    "uploaded_resource = UploadedResource.create(container=experiment, name='UploadedResource', content='UploadedResource Content!!!!')"
+    "uploaded_resource = UploadedResource.create(container=experiment, name='UploadedResource.zip', content='UploadedResource Content!!!!')"
    ],
    "metadata": {
     "collapsed": false,
@@ -87,13 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
-      "text/plain": "File(name='UploadedResourceNone', content=b'UploadedResource Content!!!!', content_type='application/octet-stream')"
+      "text/plain": "File(name='UploadedResource.zip', content=b'UploadedResource Content!!!!', content_type='application/x-zip-compressed')"
      },
-     "execution_count": 50,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,13 +101,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "UploadedResource(type=<EntityType.UPLOADED_RESOURCE: 'uploadedResource'>, eid='uploadedResource:03ade164-30e8-4370-94f8-5869438c1c6b', digest='35694341', name='UploadedResourceNone', description='', created_at=datetime.datetime(2022, 7, 11, 12, 46, 38, 49000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 11, 12, 46, 38, 49000, tzinfo=datetime.timezone.utc))"
+      "text/plain": "UploadedResource(type=<EntityType.UPLOADED_RESOURCE: 'uploadedResource'>, eid='uploadedResource:e371dd59-b715-4f2c-bf34-13819c1d9d66', digest='38763801', name='UploadedResource.zip', description='', created_at=datetime.datetime(2022, 7, 12, 9, 14, 4, 560000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 12, 9, 14, 4, 560000, tzinfo=datetime.timezone.utc))"
      },
-     "execution_count": 51,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,13 +124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "UploadedResource(type=<EntityType.UPLOADED_RESOURCE: 'uploadedResource'>, eid='uploadedResource:48ec6e2a-3a7b-4fd8-a278-2ddf09b0b7e8', digest='51883370', name='download (1).zip', description='', created_at=datetime.datetime(2022, 7, 11, 11, 16, 44, 32000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 11, 11, 16, 44, 32000, tzinfo=datetime.timezone.utc))"
      },
-     "execution_count": 52,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "file_ur = another_uploaded_resource.get_content()"
@@ -171,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -195,13 +186,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
-      "text/plain": "[UploadedResource(type=<EntityType.UPLOADED_RESOURCE: 'uploadedResource'>, eid='uploadedResource:b2e61e0a-9027-4b49-93f8-4b39e698d7c3', digest='91820847', name='download (1).zip', description='', created_at=datetime.datetime(2022, 7, 11, 12, 45, 12, 760000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 11, 12, 45, 12, 760000, tzinfo=datetime.timezone.utc)),\n UploadedResource(type=<EntityType.UPLOADED_RESOURCE: 'uploadedResource'>, eid='uploadedResource:03ade164-30e8-4370-94f8-5869438c1c6b', digest='27219896', name='UploadedResourceNone', description='', created_at=datetime.datetime(2022, 7, 11, 12, 46, 38, 49000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 11, 12, 46, 41, 146000, tzinfo=datetime.timezone.utc))]"
+      "text/plain": "[UploadedResource(type=<EntityType.UPLOADED_RESOURCE: 'uploadedResource'>, eid='uploadedResource:b2e61e0a-9027-4b49-93f8-4b39e698d7c3', digest='91820847', name='download (1).zip', description='', created_at=datetime.datetime(2022, 7, 11, 12, 45, 12, 760000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 11, 12, 45, 12, 760000, tzinfo=datetime.timezone.utc)),\n Image(type=<EntityType.IMAGE_RESOURCE: 'imageResource'>, eid='imageResource:05f3daae-b05a-4118-a96a-be6ee26a4a3f', digest='94396040', name='download (1).jpg', description='', created_at=datetime.datetime(2022, 7, 11, 12, 49, 16, 794000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 11, 12, 49, 18, 955000, tzinfo=datetime.timezone.utc)),\n Entity(type='materialsTable', eid='materialsTable:e2f6e4a2-8069-4356-a398-18cd05a46bb8', digest='16561316', name='Materials Table', description='', created_at=datetime.datetime(2022, 7, 12, 8, 15, 42, 611000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 12, 8, 16, 21, 866000, tzinfo=datetime.timezone.utc)),\n UploadedResource(type=<EntityType.UPLOADED_RESOURCE: 'uploadedResource'>, eid='uploadedResource:e371dd59-b715-4f2c-bf34-13819c1d9d66', digest='89427805', name='UploadedResource.zip', description='', created_at=datetime.datetime(2022, 7, 12, 9, 14, 4, 560000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 7, 12, 9, 14, 13, 810000, tzinfo=datetime.timezone.utc))]"
      },
-     "execution_count": 55,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,11 +209,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "uploaded_resource.delete()"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
